syntax = "proto3";

package protobuff;

message DeviceInfoPb {
    string macId= 1;
    string osType = 2;
    string model = 3;
    string deviceName = 4;
}
